# SafeSocket

./: CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  todo.txt
demo/: README.md
diagrams/: 01_class_diagram.puml  02_component_architecture.puml  03_sequence_client_connect.puml  04_sequence_messaging.puml  05_sequence_file_transfer.puml  06_packet_wire_format.puml  07_server_thread_model.puml  08_client_thread_model.puml  09_crypto_pipeline.puml  10_config_flow.puml  11_sequence_keepalive.puml  12_network_layer.puml
docs/: README.md
docs/architecture/: README.md
docs/doxygen/: annotated.html  annotated_dup.js  class_client-members.html  class_client.html  class_client.js  class_server-members.html  class_server.html  class_server.js  classes.html  client_8cpp.html  client_8hpp.html  client_8hpp.js  client_8hpp_source.html  config_8cpp.html  config_8cpp.js  config_8hpp.html  config_8hpp.js  config_8hpp_source.html  crypto_8cpp.html  crypto_8cpp.js  crypto_8hpp.html  crypto_8hpp.js  crypto_8hpp_source.html  dir_84a5ee4dd22afaf8ecc1a7c5ebf369d0.html  dir_84a5ee4dd22afaf8ecc1a7c5ebf369d0.js  dir_87660d38d1258a12d24e7500daacb66b.html  dir_87660d38d1258a12d24e7500daacb66b.js  dir_d522931ffa1371640980b621734a4381.html  dir_ebcf9be736b2c204f459fd585f730c6a.html  dir_ebcf9be736b2c204f459fd585f730c6a.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  (+37 more)
docs/doxygen/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+50 more)
docs/usage/: README.md
gui/: BUILD.md  CMakeLists.txt  Makefile  Makefile.win  README.md  TASKS.md  imgui.ini  local.enc  safesocket.conf  safesocket.profile
gui/fonts/: README.md
gui/include/: app.hpp  client.hpp  config.hpp  gui_client.hpp  gui_server.hpp  security.hpp  server.hpp
gui/scripts/: fetch_imgui.sh
gui/src/: app.cpp  client.cpp  config.cpp  crypto.cpp  main_gui.cpp  security.cpp  server.cpp  server_gui_ext.cpp  window_chat.cpp  window_connect.cpp  window_files.cpp  window_server.cpp  window_settings.cpp
src/: Makefile.win  client.cpp  client.hpp  crypto.hpp  main.cpp  network.cpp  network.hpp  protocol.hpp  safesocket.dev  safesocket.layout  server.cpp  server.hpp
tests/: CMakeLists.txt  Makefile  README.md  socket_pair.hpp  temp_file.hpp  test_access_key.cpp  test_broadcast.cpp  test_config_load_save.cpp  test_config_set_get.cpp  test_encrypt_type.cpp  test_file_hash.cpp  test_file_send.cpp  test_fmt_bytes.cpp  test_framework.hpp  test_net_init.cpp  test_net_listen_connect.cpp  test_net_packet_io.cpp  test_net_raw_io.cpp  test_nick_change.cpp  test_packet_header.cpp  test_private_msg.cpp  test_rc4.cpp  test_stress_clients.cpp  test_stress_crypto.cpp  test_vigenere.cpp  test_xor.cpp
